moved function  index_nfcapd_file in nf-reader

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-nf-bitindex:	nf-bitindex.o	iv4file.o iv4ipc.o
-	gcc -o nf-bitindex nf-bitindex.o iv4file.o iv4ipc.o -ggdb -lnfdump `pkg-config --libs glib-2.0` -lz
+nf-bitindex:	nf-bitindex.o	iv4file.o iv4ipc.o nf-reader.o
+	gcc -o nf-bitindex nf-bitindex.o iv4file.o iv4ipc.o nf-reader.o -ggdb -lnfdump `pkg-config --libs glib-2.0` -lz
 
 nf-bitindex.o:	nf-bitindex.c
 	gcc -Wall -c nf-bitindex.c -ggdb `pkg-config --cflags glib-2.0`
@@ -9,6 +9,8 @@ iv4file.o:	iv4file.c
 
 iv4ipc.o:	iv4ipc.c
 	gcc -Wall -c iv4ipc.c -ggdb
+nf-reader.o:	nf-reader.c
+	gcc -Wall -c nf-reader.c -ggdb
 clean:
 	- rm nf-bitindex
 	- rm *.o
